<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_15"
            android:textStyle="bold"
            android:id="@+id/radiusdidisplay"/>


        <SeekBar
        android:id="@+id/radius"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_13"
        android:orientation="vertical">

    <CheckBox
        android:id="@+id/priorityaccuratyhigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highpriority" />

    <CheckBox
        android:id="@+id/priorityaccuratybalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balancepriority" />

    <CheckBox
        android:id="@+id/priorityaccuratylow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowpriority" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="@dimen/margin_30">

            <Button
                android:id="@+id/dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/round_button"
                android:textAllCaps="false"
                android:text="@string/cancel"
                android:layout_weight="0.4"
                android:textColor="@android:color/holo_blue_dark"/>

            <View android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:layout_width="0dp"></View>

            <Button
                android:id="@+id/save_changes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/round_button"
                android:textAllCaps="false"
                android:text="@string/save"
                android:layout_weight="0.4"
                android:textColor="@android:color/holo_blue_dark"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_15"
            android:text="@string/note"/>

    </LinearLayout>
</LinearLayout>
</LinearLayout>