<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/virtualpathtext"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/frame_save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/margin_13" />

                <TextView
                    android:id="@+id/total_dis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/margin_13" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_virtualview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_4"
                    android:background="@android:color/transparent" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/savefilename"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/filename"
                    android:padding="@dimen/margin_8"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/margin_13"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/button_selector"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@android:color/holo_blue_dark" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_weight="0.4"
                android:background="@drawable/round_button"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"></View>

            <Button
                android:id="@+id/dialog_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="0.4"
                android:background="@drawable/round_button"
                android:text="@string/proceed"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_8"></View>

    </LinearLayout>

</LinearLayout>